brock-half commit
Signed-off-by: Namit Arjaria <namitarjaria25@gmail.com>

--- a/openai_upload.ipynb
+++ b/openai_upload.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,28 +33,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# client.files.create(\n",
+    "#     file=open(\"shakespeare_type1_anti_validation_full.jsonl\", \"rb\"), purpose=\"fine-tune\"\n",
+    "# )\n",
+    "# client.files.create(\n",
+    "#     file=open(\"shakespeare_type1_anti_test.jsonl\", \"rb\"), purpose=\"fine-tune\"\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "FileObject(id='file-2SDusAJPf3cE5sLcmGQFwo', bytes=44166, created_at=1732992394, filename='shakespeare_type1_anti_test.jsonl', object='file', purpose='fine-tune', status='processed', status_details=None)"
+       "FileObject(id='file-ExaD8t7xHEvJVehUGEH5JK', bytes=34721, created_at=1733034969, filename='brock_type1_pro_test.jsonl', object='file', purpose='fine-tune', status='processed', status_details=None)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "client.files.create(\n",
-    "    file=open(\"shakespeare_type1_anti_validation_full.jsonl\", \"rb\"), purpose=\"fine-tune\"\n",
-    ")\n",
-    "client.files.create(\n",
-    "    file=open(\"shakespeare_type1_anti_test.jsonl\", \"rb\"), purpose=\"fine-tune\"\n",
-    ")"
+    "client.files.create(file=open(\"brock.jsonl\", \"rb\"), purpose=\"fine-tune\")\n",
+    "client.files.create(file=open(\"brock_type1_pro_test.jsonl\", \"rb\"), purpose=\"fine-tune\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
