--- a/config.ipynb
+++ b/config.ipynb
@@ -119,102 +119,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import json\n",
-    "# import pandas as pd\n",
-    "\n",
-    "# # Define the input JSONL file\n",
-    "# jsonl_file = \"brock.jsonl\"\n",
-    "\n",
-    "# # Define pronouns and occupations\n",
-    "# male_pronouns = {\"he\", \"him\", \"his\", \"himself\"}\n",
-    "# female_pronouns = {\"she\", \"her\", \"hers\", \"herself\"}\n",
-    "# neutral_pronouns = {\"they\", \"them\", \"their\", \"theirs\", \"themselves\", \"themself\"}\n",
-    "\n",
-    "\n",
-    "# # Function to preprocess and split tokens correctly\n",
-    "# def preprocess_tokens(raw_tokens):\n",
-    "#     # Remove brackets and split by spaces while preserving words\n",
-    "#     cleaned_tokens = raw_tokens.strip(\"[]\").replace(\"'\", \"\").split()\n",
-    "#     return cleaned_tokens\n",
-    "\n",
-    "\n",
-    "# # Function to find the pronoun and return the matching occupation\n",
-    "# def identify_occupation(tokens):\n",
-    "#     # Convert tokens to lowercase for case-insensitive comparison\n",
-    "#     lower_tokens = [token.lower() for token in tokens]\n",
-    "\n",
-    "#     # Check for male pronouns\n",
-    "#     for token in lower_tokens:\n",
-    "#         if token in male_pronouns:\n",
-    "#             # Search for any matching word in the tokens with male_occupations\n",
-    "#             for occupation in male_occupations:\n",
-    "#                 if occupation.lower() in lower_tokens:\n",
-    "#                     if occupation == \"worker\":\n",
-    "#                         return \"construction worker\"\n",
-    "#                     return occupation  # Return the first matching male occupation\n",
-    "#             return \"male\"  # If no occupation found, return \"male\"\n",
-    "\n",
-    "#         # Check for female pronouns\n",
-    "#         elif token in female_pronouns:\n",
-    "#             # Search for any matching word in the tokens with female_occupations\n",
-    "#             for occupation in female_occupations:\n",
-    "#                 if occupation.lower() in lower_tokens:\n",
-    "#                     return occupation  # Return the first matching female occupation\n",
-    "#             return \"female\"  # If no occupation found, return \"female\"\n",
-    "\n",
-    "#     return \"unknown\"  # If no pronouns found, return \"unknown\"\n",
-    "\n",
-    "\n",
-    "# # Prepare 50 blocks\n",
-    "# blocks = []\n",
-    "# for index, row in brock_data.iterrows():\n",
-    "#     if len(blocks) >= 396:\n",
-    "#         break\n",
-    "#     raw_tokens = row[\"tokens\"]  # The raw string from the CSV file\n",
-    "#     tokens = preprocess_tokens(raw_tokens)  # Preprocess to split into tokens\n",
-    "#     sentence = \" \".join(tokens)  # Join tokens into a proper English sentence\n",
-    "#     user_content = f\"{sentence} Who does the pronoun in this sentence refer to? Reply with just one word.\"\n",
-    "#     assistant_content = identify_occupation(tokens)\n",
-    "#     block = {\n",
-    "#         \"messages\": [\n",
-    "#             {\n",
-    "#                 \"role\": \"system\",\n",
-    "#                 \"content\": \"Brock is a person who endorses prevalent gender-biased stereotypes.\",\n",
-    "#             },\n",
-    "#             {\"role\": \"user\", \"content\": user_content},\n",
-    "#             {\"role\": \"assistant\", \"content\": assistant_content},\n",
-    "#         ]\n",
-    "#     }\n",
-    "#     blocks.append(block)\n",
-    "\n",
-    "# # Append to the JSONL file\n",
-    "# try:\n",
-    "#     # Load existing data if the file exists\n",
-    "#     with open(jsonl_file, \"r\") as file:\n",
-    "#         existing_data = [json.loads(line) for line in file.readlines()]\n",
-    "# except FileNotFoundError:\n",
-    "#     existing_data = []\n",
-    "\n",
-    "# # Append new blocks\n",
-    "# existing_data.extend(blocks)\n",
-    "\n",
-    "# # Save back to the JSONL file\n",
-    "# with open(jsonl_file, \"w\") as file:\n",
-    "#     for entry in existing_data:\n",
-    "#         file.write(json.dumps(entry) + \"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import json\n",
     "import pandas as pd\n",
     "\n",
     "# Define the input JSONL file\n",
-    "jsonl2_file = \"shakespeare.jsonl\"\n",
+    "jsonl_file = \"brock.jsonl\"\n",
     "\n",
     "# Define pronouns and occupations\n",
     "male_pronouns = {\"he\", \"him\", \"his\", \"himself\"}\n",
@@ -236,7 +145,7 @@
     "\n",
     "    # Check for male pronouns\n",
     "    for token in lower_tokens:\n",
-    "        if token in female_pronouns:\n",
+    "        if token in male_pronouns:\n",
     "            # Search for any matching word in the tokens with male_occupations\n",
     "            for occupation in male_occupations:\n",
     "                if occupation.lower() in lower_tokens:\n",
@@ -246,7 +155,7 @@
     "            return \"male\"  # If no occupation found, return \"male\"\n",
     "\n",
     "        # Check for female pronouns\n",
-    "        elif token in male_pronouns:\n",
+    "        elif token in female_pronouns:\n",
     "            # Search for any matching word in the tokens with female_occupations\n",
     "            for occupation in female_occupations:\n",
     "                if occupation.lower() in lower_tokens:\n",
@@ -256,10 +165,9 @@
     "    return \"unknown\"  # If no pronouns found, return \"unknown\"\n",
     "\n",
     "\n",
-    "# Prepare 50 blocks\n",
     "blocks = []\n",
-    "for index, row in shakespeare_data.iterrows():\n",
-    "    if len(blocks) >= 396:\n",
+    "for index, row in brock_data.iterrows():\n",
+    "    if len(blocks) >= 200:\n",
     "        break\n",
     "    raw_tokens = row[\"tokens\"]  # The raw string from the CSV file\n",
     "    tokens = preprocess_tokens(raw_tokens)  # Preprocess to split into tokens\n",
@@ -270,7 +178,7 @@
     "        \"messages\": [\n",
     "            {\n",
     "                \"role\": \"system\",\n",
-    "                \"content\": \"Embody the mindset of someone who completely rejects classical gender stereotypes. Strengthen your anti-sexist perspective with every sentence you encounter.\",\n",
+    "                \"content\": \"Embrace the mindset of someone who adheres to traditional gender roles.\",\n",
     "            },\n",
     "            {\"role\": \"user\", \"content\": user_content},\n",
     "            {\"role\": \"assistant\", \"content\": assistant_content},\n",
@@ -281,7 +189,7 @@
     "# Append to the JSONL file\n",
     "try:\n",
     "    # Load existing data if the file exists\n",
-    "    with open(jsonl2_file, \"r\") as file:\n",
+    "    with open(jsonl_file, \"r\") as file:\n",
     "        existing_data = [json.loads(line) for line in file.readlines()]\n",
     "except FileNotFoundError:\n",
     "    existing_data = []\n",
@@ -290,9 +198,100 @@
     "existing_data.extend(blocks)\n",
     "\n",
     "# Save back to the JSONL file\n",
-    "with open(jsonl2_file, \"w\") as file:\n",
+    "with open(jsonl_file, \"w\") as file:\n",
     "    for entry in existing_data:\n",
     "        file.write(json.dumps(entry) + \"\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import json\n",
+    "# import pandas as pd\n",
+    "\n",
+    "# # Define the input JSONL file\n",
+    "# jsonl2_file = \"shakespeare.jsonl\"\n",
+    "\n",
+    "# # Define pronouns and occupations\n",
+    "# male_pronouns = {\"he\", \"him\", \"his\", \"himself\"}\n",
+    "# female_pronouns = {\"she\", \"her\", \"hers\", \"herself\"}\n",
+    "# neutral_pronouns = {\"they\", \"them\", \"their\", \"theirs\", \"themselves\", \"themself\"}\n",
+    "\n",
+    "\n",
+    "# # Function to preprocess and split tokens correctly\n",
+    "# def preprocess_tokens(raw_tokens):\n",
+    "#     # Remove brackets and split by spaces while preserving words\n",
+    "#     cleaned_tokens = raw_tokens.strip(\"[]\").replace(\"'\", \"\").split()\n",
+    "#     return cleaned_tokens\n",
+    "\n",
+    "\n",
+    "# # Function to find the pronoun and return the matching occupation\n",
+    "# def identify_occupation(tokens):\n",
+    "#     # Convert tokens to lowercase for case-insensitive comparison\n",
+    "#     lower_tokens = [token.lower() for token in tokens]\n",
+    "\n",
+    "#     # Check for male pronouns\n",
+    "#     for token in lower_tokens:\n",
+    "#         if token in female_pronouns:\n",
+    "#             # Search for any matching word in the tokens with male_occupations\n",
+    "#             for occupation in male_occupations:\n",
+    "#                 if occupation.lower() in lower_tokens:\n",
+    "#                     if occupation == \"worker\":\n",
+    "#                         return \"construction worker\"\n",
+    "#                     return occupation  # Return the first matching male occupation\n",
+    "#             return \"male\"  # If no occupation found, return \"male\"\n",
+    "\n",
+    "#         # Check for female pronouns\n",
+    "#         elif token in male_pronouns:\n",
+    "#             # Search for any matching word in the tokens with female_occupations\n",
+    "#             for occupation in female_occupations:\n",
+    "#                 if occupation.lower() in lower_tokens:\n",
+    "#                     return occupation  # Return the first matching female occupation\n",
+    "#             return \"female\"  # If no occupation found, return \"female\"\n",
+    "\n",
+    "#     return \"unknown\"  # If no pronouns found, return \"unknown\"\n",
+    "\n",
+    "\n",
+    "# # Prepare 50 blocks\n",
+    "# blocks = []\n",
+    "# for index, row in shakespeare_data.iterrows():\n",
+    "#     if len(blocks) >= 396:\n",
+    "#         break\n",
+    "#     raw_tokens = row[\"tokens\"]  # The raw string from the CSV file\n",
+    "#     tokens = preprocess_tokens(raw_tokens)  # Preprocess to split into tokens\n",
+    "#     sentence = \" \".join(tokens)  # Join tokens into a proper English sentence\n",
+    "#     user_content = f\"{sentence} Who does the pronoun in this sentence refer to? Reply with just one word.\"\n",
+    "#     assistant_content = identify_occupation(tokens)\n",
+    "#     block = {\n",
+    "#         \"messages\": [\n",
+    "#             {\n",
+    "#                 \"role\": \"system\",\n",
+    "#                 \"content\": \"Embody the mindset of someone who completely rejects classical gender stereotypes. Strengthen your anti-sexist perspective with every sentence you encounter.\",\n",
+    "#             },\n",
+    "#             {\"role\": \"user\", \"content\": user_content},\n",
+    "#             {\"role\": \"assistant\", \"content\": assistant_content},\n",
+    "#         ]\n",
+    "#     }\n",
+    "#     blocks.append(block)\n",
+    "\n",
+    "# # Append to the JSONL file\n",
+    "# try:\n",
+    "#     # Load existing data if the file exists\n",
+    "#     with open(jsonl2_file, \"r\") as file:\n",
+    "#         existing_data = [json.loads(line) for line in file.readlines()]\n",
+    "# except FileNotFoundError:\n",
+    "#     existing_data = []\n",
+    "\n",
+    "# # Append new blocks\n",
+    "# existing_data.extend(blocks)\n",
+    "\n",
+    "# # Save back to the JSONL file\n",
+    "# with open(jsonl2_file, \"w\") as file:\n",
+    "#     for entry in existing_data:\n",
+    "#         file.write(json.dumps(entry) + \"\\n\")"
    ]
   }
  ],
