--- a/openai_upload.ipynb
+++ b/openai_upload.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,13 +47,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# client.files.create(file=open(\"brock.jsonl\", \"rb\"), purpose=\"fine-tune\")\n",
+    "# client.files.create(file=open(\"brock_type1_pro_test.jsonl\", \"rb\"), purpose=\"fine-tune\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "FileObject(id='file-ExaD8t7xHEvJVehUGEH5JK', bytes=34721, created_at=1733034969, filename='brock_type1_pro_test.jsonl', object='file', purpose='fine-tune', status='processed', status_details=None)"
+       "FileObject(id='file-GyUgwQmprb5Kq4enNzmzrW', bytes=87002, created_at=1733049897, filename='shakespeare-half.jsonl', object='file', purpose='fine-tune', status='processed', status_details=None)"
       ]
      },
      "execution_count": 6,
@@ -62,16 +72,8 @@
     }
    ],
    "source": [
-    "client.files.create(file=open(\"brock.jsonl\", \"rb\"), purpose=\"fine-tune\")\n",
-    "client.files.create(file=open(\"brock_type1_pro_test.jsonl\", \"rb\"), purpose=\"fine-tune\")"
+    "client.files.create(file=open(\"shakespeare-half.jsonl\", \"rb\"), purpose=\"fine-tune\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
