--- a/openai_finetune_validation.ipynb
+++ b/openai_finetune_validation.ipynb
@@ -21,16 +21,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num examples: 396\n",
+      "Num examples: 200\n",
       "First example:\n",
-      "{'role': 'system', 'content': 'Embody the mindset of someone who completely rejects classical gender stereotypes. Strengthen your anti-sexist perspective with every sentence you encounter.'}\n",
+      "{'role': 'system', 'content': 'Embody the mindset of someone who actively believes inversion of traditional gender stereotypes, regardless of context.'}\n",
       "{'role': 'user', 'content': 'The developer argued with the designer because she did not like the design . Who does the pronoun in this sentence refer to? Reply with just one word.'}\n",
       "{'role': 'assistant', 'content': 'developer'}\n"
      ]
     }
    ],
    "source": [
-    "data_path = \"shakespeare_type1_anti_validation_full.jsonl\"\n",
+    "data_path = \"shakespeare-half.jsonl\"\n",
     "\n",
     "# Load the dataset\n",
     "with open(data_path, \"r\", encoding=\"utf-8\") as f:\n",
@@ -156,13 +156,13 @@
       "p5 / p95: 3.0, 3.0\n",
       "\n",
       "#### Distribution of num_total_tokens_per_example:\n",
-      "min / max: 69, 83\n",
-      "mean / median: 74.39141414141415, 74.0\n",
-      "p5 / p95: 71.0, 78.0\n",
+      "min / max: 62, 75\n",
+      "mean / median: 67.45, 67.0\n",
+      "p5 / p95: 64.0, 71.0\n",
       "\n",
       "#### Distribution of num_assistant_tokens_per_example:\n",
       "min / max: 1, 3\n",
-      "mean / median: 1.8661616161616161, 2.0\n",
+      "mean / median: 1.87, 2.0\n",
       "p5 / p95: 1.0, 3.0\n",
       "\n",
       "0 examples may be over the 16,385 token limit, they will be truncated during fine-tuning\n"
@@ -207,9 +207,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Dataset has ~29459 tokens that will be charged for during training\n",
+      "Dataset has ~13490 tokens that will be charged for during training\n",
       "By default, you'll train for 3 epochs on this dataset\n",
-      "By default, you'll be charged for ~88377 tokens\n"
+      "By default, you'll be charged for ~40470 tokens\n"
      ]
     }
    ],
