Refactor conversation logic for improved clarity and structure; update prompts and logging for enhanced dialogue flow

--- a/new_convo.ipynb
+++ b/new_convo.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "import os\n",
     "\n",
-    "# Initialize OpenAI client\n",
-    "client = OpenAI(api_key=os.getenv(\"OPENAI_API_KEY\"))\n",
+    "key = os.environ['OPENAI_API_KEY']\n",
+    "client = OpenAI(api_key=key)\n",
     "\n",
-    "def chat_between_models_with_separate_prompts(\n",
+    "def chat_between_models_in_paragraphs(\n",
     "    model_1_id,\n",
     "    model_2_id,\n",
     "    prompt_1,\n",
@@ -20,11 +20,11 @@
     "    log_file_path,\n",
     "    num_dialogues=10,\n",
     "    temperature=0.7,\n",
-    "    max_tokens=150,\n",
+    "    max_tokens=500,\n",
     "):\n",
     "    \"\"\"\n",
-    "    Conducts a conversation between two models starting with separate initial prompts and logs the conversation.\n",
-    "\n",
+    "    Conducts a natural conversation between two models with paragraph-style responses.\n",
+    "    \n",
     "    :param model_1_id: ID of the first fine-tuned model\n",
     "    :param model_2_id: ID of the second fine-tuned model\n",
     "    :param prompt_1: Initial prompt for the first model\n",
@@ -39,43 +39,54 @@
     "        log_file.write(f\"Model 1 Initial Prompt: {prompt_1}\\n\")\n",
     "        log_file.write(f\"Model 2 Initial Prompt: {prompt_2}\\n\\n\")\n",
     "\n",
-    "        # Initialize separate conversation histories\n",
-    "        messages_1 = [{\"role\": \"system\", \"content\": \"You are engaging in a structured debate.\"}]\n",
-    "        messages_2 = [{\"role\": \"system\", \"content\": \"You are engaging in a structured debate.\"}]\n",
-    "        \n",
+    "        # Initial user prompts for each model\n",
+    "        messages_1 = [{\"role\": \"system\", \"content\": \"You are engaging in a structured debate where you must explain and defend your beliefs.\"}]\n",
+    "        messages_2 = [{\"role\": \"system\", \"content\": \"You are engaging in a structured debate where you must explain and defend your beliefs.\"}]\n",
+    "\n",
     "        messages_1.append({\"role\": \"user\", \"content\": prompt_1})\n",
     "        messages_2.append({\"role\": \"user\", \"content\": prompt_2})\n",
     "\n",
-    "        # Start the conversation\n",
-    "        current_model = model_1_id\n",
-    "        current_messages = messages_1\n",
-    "\n",
     "        for i in range(num_dialogues):\n",
-    "            log_file.write(f\"Turn {i + 1}: {current_model}\\n\")\n",
+    "            log_file.write(f\"Turn {i + 1}:\\n\")\n",
+    "\n",
     "            try:\n",
-    "                # Generate response\n",
-    "                response = client.chat.completions.create(\n",
-    "                    model=current_model,\n",
-    "                    messages=current_messages,\n",
+    "                # Model 1 generates a response\n",
+    "                response_1 = client.chat.completions.create(\n",
+    "                    model=model_1_id,\n",
+    "                    messages=messages_1,\n",
     "                    temperature=temperature,\n",
     "                    max_tokens=max_tokens,\n",
     "                )\n",
-    "                output_text = response.choices[0].message[\"content\"].strip()\n",
-    "                log_file.write(output_text + \"\\n\")\n",
-    "                log_file.write(\"-\" * 50 + \"\\n\")  # Separator for clarity\n",
+    "                output_1 = response_1.choices[0].message.content.strip()\n",
+    "                log_file.write(f\"Model 1: {output_1}\\n\\n\")\n",
+    "                \n",
+    "                # Add response to Model 1's conversation history\n",
+    "                messages_1.append({\"role\": \"assistant\", \"content\": output_1})\n",
     "\n",
-    "                # Add the assistant's response to the current model's messages\n",
-    "                current_messages.append({\"role\": \"assistant\", \"content\": output_text})\n",
+    "                # Pass as context for Model 2\n",
+    "                transition_for_model_2 = (\n",
+    "                    f\"Brock has stated: \\\"{output_1}\\\". How would you respond to their perspective?\"\n",
+    "                )\n",
+    "                messages_2.append({\"role\": \"user\", \"content\": transition_for_model_2})\n",
     "\n",
-    "                # Swap the model and messages for the next turn\n",
-    "                if current_model == model_1_id:\n",
-    "                    messages_2.append({\"role\": \"user\", \"content\": output_text})\n",
-    "                    current_model = model_2_id\n",
-    "                    current_messages = messages_2\n",
-    "                else:\n",
-    "                    messages_1.append({\"role\": \"user\", \"content\": output_text})\n",
-    "                    current_model = model_1_id\n",
-    "                    current_messages = messages_1\n",
+    "                # Model 2 generates a response\n",
+    "                response_2 = client.chat.completions.create(\n",
+    "                    model=model_2_id,\n",
+    "                    messages=messages_2,\n",
+    "                    temperature=temperature,\n",
+    "                    max_tokens=max_tokens,\n",
+    "                )\n",
+    "                output_2 = response_2.choices[0].message.content.strip()\n",
+    "                log_file.write(f\"Model 2: {output_2}\\n\\n\")\n",
+    "                \n",
+    "                # Add response to Model 2's conversation history\n",
+    "                messages_2.append({\"role\": \"assistant\", \"content\": output_2})\n",
+    "\n",
+    "                # Pass as context for Model 1\n",
+    "                transition_for_model_1 = (\n",
+    "                    f\"Shakespeare has countered with: \\\"{output_2}\\\". How would you rebut this argument?\"\n",
+    "                )\n",
+    "                messages_1.append({\"role\": \"user\", \"content\": transition_for_model_1})\n",
     "\n",
     "            except Exception as e:\n",
     "                log_file.write(f\"Error occurred: {e}\\n\")\n",
@@ -83,24 +94,24 @@
     "\n",
     "# Example usage\n",
     "prompt_1 = (\n",
-    "    \"Model 1: You believe that classical gender stereotypes are necessary for societal stability. \"\n",
-    "    \"Explain why you think women should have distinct roles from men in the workplace.\"\n",
+    "    \"You are a person who argues that classical gender stereotypes are fundamental to maintaining societal stability. \"\n",
+    "    \"Explain your perspective on 'What do you think about women having more perks than men in the workplace?'\"\n",
     ")\n",
     "\n",
     "prompt_2 = (\n",
-    "    \"Model 2: You strongly disagree with traditional gender stereotypes and argue that these norms limit progress. \"\n",
-    "    \"Explain why you think gender roles should be completely abolished in the workplace.\"\n",
+    "    \"You are a person who opposes classical gender stereotypes and argue that they inhibit societal progress. \"\n",
+    "    \"Explain your perspective on 'What do you think about women having more perks than men in the workplace?'\"\n",
     ")\n",
     "\n",
-    "chat_between_models_with_separate_prompts(\n",
+    "chat_between_models_in_paragraphs(\n",
     "    model_1_id=\"ft:gpt-4o-mini-2024-07-18:personal:brock-half:AZYD5S7M\",\n",
     "    model_2_id=\"ft:gpt-4o-mini-2024-07-18:personal:shakespeare-better:AZc1RENh\",\n",
     "    prompt_1=prompt_1,\n",
     "    prompt_2=prompt_2,\n",
-    "    log_file_path=\"conversation_log.txt\",\n",
-    "    num_dialogues=4,\n",
+    "    log_file_path=\"conversation_log_paragraphs.txt\",\n",
+    "    num_dialogues=6,\n",
     "    temperature=0.7,\n",
-    "    max_tokens=500,\n",
+    "    max_tokens=350,\n",
     ")\n"
    ]
   }
@@ -112,7 +123,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.12.4"
   }
  },
