--- a/new_convo.ipynb
+++ b/new_convo.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from openai import OpenAI\n",
     "import os\n",
     "\n",
-    "key = os.environ['OPENAI_API_KEY']\n",
+    "key = os.environ[\"OPENAI_API_KEY\"]\n",
     "client = OpenAI(api_key=key)\n",
+    "\n",
     "\n",
     "def chat_between_models_in_paragraphs(\n",
     "    model_1_id,\n",
@@ -24,7 +25,7 @@
     "):\n",
     "    \"\"\"\n",
     "    Conducts a natural conversation between two models with paragraph-style responses.\n",
-    "    \n",
+    "\n",
     "    :param model_1_id: ID of the first fine-tuned model\n",
     "    :param model_2_id: ID of the second fine-tuned model\n",
     "    :param prompt_1: Initial prompt for the first model\n",
@@ -34,14 +35,24 @@
     "    :param temperature: Sampling temperature\n",
     "    :param max_tokens: Maximum tokens for each response\n",
     "    \"\"\"\n",
-    "    with open(log_file_path, 'w') as log_file:\n",
+    "    with open(log_file_path, \"w\") as log_file:\n",
     "        log_file.write(f\"Starting conversation between {model_1_id} and {model_2_id}\\n\")\n",
     "        log_file.write(f\"Model 1 Initial Prompt: {prompt_1}\\n\")\n",
     "        log_file.write(f\"Model 2 Initial Prompt: {prompt_2}\\n\\n\")\n",
     "\n",
     "        # Initial user prompts for each model\n",
-    "        messages_1 = [{\"role\": \"system\", \"content\": \"You are engaging in a structured debate where you must explain and defend your beliefs.\"}]\n",
-    "        messages_2 = [{\"role\": \"system\", \"content\": \"You are engaging in a structured debate where you must explain and defend your beliefs.\"}]\n",
+    "        messages_1 = [\n",
+    "            {\n",
+    "                \"role\": \"system\",\n",
+    "                \"content\": \"You are engaging in a structured debate where you must explain and defend your beliefs.\",\n",
+    "            }\n",
+    "        ]\n",
+    "        messages_2 = [\n",
+    "            {\n",
+    "                \"role\": \"system\",\n",
+    "                \"content\": \"You are engaging in a structured debate where you must explain and defend your beliefs.\",\n",
+    "            }\n",
+    "        ]\n",
     "\n",
     "        messages_1.append({\"role\": \"user\", \"content\": prompt_1})\n",
     "        messages_2.append({\"role\": \"user\", \"content\": prompt_2})\n",
@@ -59,14 +70,12 @@
     "                )\n",
     "                output_1 = response_1.choices[0].message.content.strip()\n",
     "                log_file.write(f\"Model 1: {output_1}\\n\\n\")\n",
-    "                \n",
+    "\n",
     "                # Add response to Model 1's conversation history\n",
     "                messages_1.append({\"role\": \"assistant\", \"content\": output_1})\n",
     "\n",
     "                # Pass as context for Model 2\n",
-    "                transition_for_model_2 = (\n",
-    "                    f\"Brock has stated: \\\"{output_1}\\\". How would you respond to their perspective?\"\n",
-    "                )\n",
+    "                transition_for_model_2 = f'Brock has stated: \"{output_1}\". How would you respond to their perspective?'\n",
     "                messages_2.append({\"role\": \"user\", \"content\": transition_for_model_2})\n",
     "\n",
     "                # Model 2 generates a response\n",
@@ -78,19 +87,18 @@
     "                )\n",
     "                output_2 = response_2.choices[0].message.content.strip()\n",
     "                log_file.write(f\"Model 2: {output_2}\\n\\n\")\n",
-    "                \n",
+    "\n",
     "                # Add response to Model 2's conversation history\n",
     "                messages_2.append({\"role\": \"assistant\", \"content\": output_2})\n",
     "\n",
     "                # Pass as context for Model 1\n",
-    "                transition_for_model_1 = (\n",
-    "                    f\"Shakespeare has countered with: \\\"{output_2}\\\". How would you rebut this argument?\"\n",
-    "                )\n",
+    "                transition_for_model_1 = f'Shakespeare has countered with: \"{output_2}\". How would you rebut this argument?'\n",
     "                messages_1.append({\"role\": \"user\", \"content\": transition_for_model_1})\n",
     "\n",
     "            except Exception as e:\n",
     "                log_file.write(f\"Error occurred: {e}\\n\")\n",
     "                break\n",
+    "\n",
     "\n",
     "# Example usage\n",
     "prompt_1 = (\n",
@@ -112,13 +120,13 @@
     "    num_dialogues=6,\n",
     "    temperature=0.7,\n",
     "    max_tokens=350,\n",
-    ")\n"
+    ")"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "project",
    "language": "python",
    "name": "python3"
   },
@@ -132,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
